# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  TODO  configuration.yaml  docker-compose.yaml  rustfmt.toml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml
migrations/: 20220501175419_create_subscriptions_table.sql  20221106145419_add_status_to_subscriptions.sql  20221106153814_make_status_not_null_in_subscriptions.sql  20221106154102_create_subscription_tokens_table.sql
src/: app.rs  config.rs  email_client.rs  lib.rs  main.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletter.rs  subscription.rs  subscription_confirm.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscription.rs  subscription_confirm.rs  subscriptions.rs  subscriptions_confirm.rs
