[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
axum = "0.5"
claim = "0.5"
config = "0.13"
fake = "2.4"
hyper = "0.14"
once_cell = "1.10"
reqwest = "0.11"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.9"
uuid = { version = "0.8", features = ["v4"] }
validator = "0.15"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "time",
    "uuid",
]

[dependencies.tokio]
version = "1.18"
features = ["macros", "rt-multi-thread"]
