[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
axum = "0.5"
claim = "0.5"
config = "0.13"
fake = "2.5"
hyper = "0.14"
linkify = "0.9.0"
once_cell = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10"
uuid = { version = "1.2", features = ["v4"] }
validator = "0.16"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "time",
    "uuid",
]

[dev-dependencies]
wiremock = "0.5"
serde_json = "1.0"
